crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__functions__parse_function_keyword.snap
---
source: cash-parser/src/parser/tests/functions.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "function foo { echo hello; }",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Function(FunctionDefinition(
                fname: Word(
                  value: "foo",
                  loc: "[location]",
                ),
                body: FunctionBody(BraceGroup(BraceGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "echo",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              Word(Word(
                                value: "hello",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                )), None),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
