crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__functions__parse_function_with_extended_test_body_and_redirect.snap
---
source: cash-parser/src/parser/tests/functions.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "foo() [[ -n $1 ]] 2>&1",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Function(FunctionDefinition(
                fname: Word(
                  value: "foo",
                  loc: "[location]",
                ),
                body: FunctionBody(ExtendedTest(ExtendedTestExprCommand(
                  expr: UnaryTest(StringHasNonZeroLength, Word(
                    value: "$1",
                    loc: "[location]",
                  )),
                  loc: "[location]",
                )), Some(RedirectList([
                  File(Some(2), DuplicateOutput, Duplicate(Word(
                    value: "1",
                    loc: "[location]",
                  ))),
                ]))),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
